[gd_scene load_steps=3 format=2]

[ext_resource path="res://temp textures/main_menu_background_temp.png" type="Texture" id=1]
[ext_resource path="res://main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true

[node name="PlayButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.215686 )
margin_left = 474.0
margin_top = 179.0
margin_right = 622.0
margin_bottom = 238.0

[node name="SettingsButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.215686 )
margin_left = 480.0
margin_top = 256.0
margin_right = 646.0
margin_bottom = 334.0

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
